crates/shell/src/parser/program/tests/snapshots/omp_shell__parser__program__tests__redirections__parse_process_substitution_write.snap
---
source: brush-parser/src/parser/tests/redirections.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "tee >(grep error > errors.txt)",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "tee",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  ProcessSubstitution(Write, SubshellCommand(
                    list: CompoundList([
                      CompoundListItem(AndOrList(
                        first: Pipeline(
                          seq: [
                            Simple(SimpleCommand(
                              word_or_name: Some(Word(
                                value: "grep",
                                loc: "[location]",
                              )),
                              suffix: Some(CommandSuffix([
                                Word(Word(
                                  value: "error",
                                  loc: "[location]",
                                )),
                                IoRedirect(File(None, Write, Filename(Word(
                                  value: "errors.txt",
                                  loc: "[location]",
                                )))),
                              ])),
                            )),
                          ],
                        ),
                      ), Sequence),
                    ]),
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
