crates/shell/src/parser/program/tests/snapshots/omp_shell__parser__program__tests__redirections__parse_redirect_output_and_error_append.snap
---
source: brush-parser/src/parser/tests/redirections.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "command &>> file.txt",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "command",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(OutputAndError(Word(
                    value: "file.txt",
                    loc: "[location]",
                  ), true)),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
