crates/shell/src/parser/program/tests/snapshots/omp_shell__parser__program__tests__redirections__parse_redirect_stdin_dup.snap
---
source: brush-parser/src/parser/tests/redirections.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "command <&3",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "command",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(File(None, DuplicateInput, Duplicate(Word(
                    value: "3",
                    loc: "[location]",
                  )))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
